# vlc-playlist-generator

./: Cargo.toml  LICENSE  README.md
src/: main.rs  xml.rs
