[package]
name = "vlc-playlist-generator"
version = "0.1.0"
authors = ["Thomas van Doornmalen <thomas.vandoornmalen@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "Generate an XSPF playlist for VLC that preserves directory structure"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
walkdir = "2"
clap = { version = "4", features = [ "derive"] }
matroska = "0.19"
mp4 = "0.12"
html-escape = "0.2"
url-escape = "0.1"
